# test_assignment_03

./: .env  Cargo.toml  docker-compose.yml
migrations/2022-12-14-125015_create_customers/: up.sql
migrations/2022-12-14-125022_create_employees/: up.sql
migrations/2022-12-14-125027_create_bookings/: up.sql
src/: main.rs  schema.rs
src/models/: booking.rs  customer.rs  employee.rs  mod.rs
src/repository/: customer_repository.rs  mod.rs  repository_trait.rs
src/services/: customer_service.rs  mod.rs
