[package]
name = "test_assignment_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.23"
mockall = "0.11.3"